deploy/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aaai-web
  namespace: latere
spec:
  selector:
    app: aaai-web
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
